--- a/example/index.html
+++ b/example/index.html
@@ -47,9 +47,9 @@
     $('[node-type="container"]').carousel({
         arr: arr,
 //        config: {
-//            speed: 4, //切换图片动画速度
-//            switchSpeed: 3000, //切换图片时间间隔
-//            type: 2 //却换图片动画的效果类别：‘’：向左逐渐滑动；1:逐渐消失显示效果；2:3D旋转效果；可选参数，默认为‘’
+//            speed: 10, //切换图片动画速度
+//            switchSpeed: 5000, //切换图片时间间隔
+//            type: '' //却换图片动画的效果类别：‘’：向左逐渐滑动；1:逐渐消失显示效果；2:3D旋转效果；可选参数，默认为‘’
 //        },
 //        callback: function (index) { //每次轮播结束后console出数组索引值
 //            console.log(index)
