update-1.1.0-增加单元测试内容，支持and，cmd模式.

--- a/example/index.html
+++ b/example/index.html
@@ -7,7 +7,7 @@
 
 <body>
     <div class="container" node-type="container" style="position:relative;width:320px;height:215px;">
-        <div style="position:absolute;top:0;left:0;">ert</div>
+        <div style="position:absolute;top:0;left:0;">可自定义任何内容</div>
     </div>
 
 
@@ -42,7 +42,7 @@
         }
     ]
 
-    $('[node-type="container"]').carousel({
+    $('.container').carousel({
         arr: arr,
 //        config: {
 //            speed: 10, //切换图片动画速度
