--- a/example/index.html
+++ b/example/index.html
@@ -6,11 +6,18 @@
 </head>
 
 <body>
-    <div class="container" node-type="container" style="position:relative;width:320px;height:215px;">
-        <div style="position:absolute;top:0;left:0;">可自定义任何内容</div>
+<div class="container" node-type="container" style="position:relative;width:320px;height:215px;">
+    <div class="move" style="position:absolute;width:100%;height:30px;z-index:100;">
+        <div data-num="0" style="float:left;width:30px;height:30px;background: #fff;border-radius:50%;margin-left:10px;z-index:30;"></div>
+        <div data-num="1" style="float:left;width:30px;height:30px;background: #fff;border-radius:50%;margin-left:10px;z-index:30;"></div>
+        <div data-num="2" style="float:left;width:30px;height:30px;background: #fff;border-radius:50%;margin-left:10px;z-index:30;"></div>
+        <div data-num="3" style="float:left;width:30px;height:30px;background: #fff;border-radius:50%;margin-left:10px;z-index:30;"></div>
+        <div data-num="4" style="float:left;width:30px;height:30px;background: #fff;border-radius:50%;margin-left:10px;z-index:30;"></div>
+        <div data-num="5" style="float:left;width:30px;height:30px;background: #fff;border-radius:50%;margin-left:10px;z-index:30;"></div>
+        <div data-num="6" style="float:left;width:30px;height:30px;background: #fff;border-radius:50%;margin-left:10px;z-index:30;"></div>
     </div>
+</div>
 
-    <div class="click">click me</div>
 </body>
 <script src="http://cdn.bootcss.com/jquery/3.1.0/jquery.js"></script>
 <script src="../dist/jquery_carousel.js"></script>
@@ -63,14 +70,17 @@
         console.log(index)
     })
 
+    $('.move > div').on('mouseenter', function () {
+        console.log($(this).data('num'))
+        $('.container').change_start(parseInt($(this).data('num')))
+        $('.container').carousel_stop()
+    })
+
     $('.container').on('mouseleave', function () {
         var index = $('.container').carousel_restart()
         console.log(index)
     })
 
-    $('.click').on('click', function () {
-        $('.container').change_start(4)
-    })
 </script>
 
 </html>
