--- a/example/index.html
+++ b/example/index.html
@@ -19,7 +19,9 @@
 </div>
 
 </body>
-<script src="http://cdn.bootcss.com/jquery/3.1.0/jquery.js"></script>
+<!--<script src="http://cdn.bootcss.com/jquery/3.1.0/jquery.js"></script>-->
+<script src="https://cdn.bootcss.com/zepto/1.2.0/zepto.js"></script>
+
 <script src="../dist/jquery_carousel.js"></script>
 <script>
     var arr = [
