update-示例图片链接

--- a/example/index.html
+++ b/example/index.html
@@ -26,31 +26,31 @@
 <script>
     var arr = [
         {
-            src: '//mstore.b0.upaiyun.com/seller_goods_collection/20160804/97947/15191457a2ec726c3ed.png!w320',
+            src: 'http://mstore.b0.upaiyun.com/seller_goods_collection/20160804/97947/15191457a2ec726c3ed.png!w320',
             //href: '//www.baidu.com'
         },
         {
-            src: '//mstore.b0.upaiyun.com/seller_goods_collection/20160829/97947/18323857c40f46eed30.png!w320',
+            src: 'http://mstore.b0.upaiyun.com/seller_goods_collection/20160829/97947/18323857c40f46eed30.png!w320',
             href: ''
         },
         {
-            src: '//mstore.b0.upaiyun.com/seller_goods_collection/20160808/97947/18203257a85cf05360f.png!w320',
+            src: 'http://mstore.b0.upaiyun.com/seller_goods_collection/20160808/97947/18203257a85cf05360f.png!w320',
             href: 'http://www.baidu.com'
         },
         {
-            src: '//mstore.b0.upaiyun.com/seller_goods_collection/20160725/97947/1653105795d3768e439.jpg!w320',
+            src: 'http://mstore.b0.upaiyun.com/seller_goods_collection/20160725/97947/1653105795d3768e439.jpg!w320',
 //            href: '//www.jikexueyuan.com'
         },
         {
-            src: '//mstore.b0.upaiyun.com/seller_goods_collection/20160505/97947/182955572b20a3ad9d2.jpg!w320',
+            src: 'http://mstore.b0.upaiyun.com/seller_goods_collection/20160505/97947/182955572b20a3ad9d2.jpg!w320',
             href: ''
         },
         {
-            src: '//mstore.b0.upaiyun.com/seller_goods_collection/20160325/97947/17335256f506007560e.jpg!w320',
+            src: 'http://mstore.b0.upaiyun.com/seller_goods_collection/20160325/97947/17335256f506007560e.jpg!w320',
             href: 'http://www.jikexueyuan.com'
         },
         {
-            src: '//mstore.b0.upaiyun.com/avatar/20150513/97947/453182934.96659.jpg',
+            src: 'http://mstore.b0.upaiyun.com/avatar/20150513/97947/453182934.96659.jpg',
             href: 'http://www.jikexueyuan.com'
         }
     ]
